test/integration/bad/numeric-literal/stanc.expected
  $ ../../../../../install/default/bin/stanc int-bad1.stan
Syntax error in 'int-bad1.stan', line 2, column 17, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      int n = 10_000_;
                           ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc int-bad2.stan
Syntax error in 'int-bad2.stan', line 2, column 13, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      int n = 10__000;
                       ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc int-bad3.stan
Semantic error in 'int-bad3.stan', line 2, column 12 to column 26:
   -------------------------------------------------
     1:  transformed data {
     2:      int n = 10_000_000_000;
                     ^
     3:  }
   -------------------------------------------------

Integer literal cannot be larger than 2_147_483_647.
  $ ../../../../../install/default/bin/stanc int-bad4.stan
Semantic error in 'int-bad4.stan', line 2, column 12 to column 25:
   -------------------------------------------------
     1:  transformed data {
     2:      int n = 2_147_483_648;
                     ^
     3:  }
   -------------------------------------------------

Integer literal cannot be larger than 2_147_483_647.
  $ ../../../../../install/default/bin/stanc int-bad6.stan
Semantic error in 'int-bad6.stan', line 2, column 13 to column 23:
   -------------------------------------------------
     1:  transformed data {
     2:      int n = -2147483648;
                      ^
     3:  }
   -------------------------------------------------

Integer literal cannot be larger than 2_147_483_647.
  $ ../../../../../install/default/bin/stanc real-bad1.stan
Syntax error in 'real-bad1.stan', line 2, column 12, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      real x = .e+44;
                      ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc real-bad2.stan
Syntax error in 'real-bad2.stan', line 2, column 14, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      real x = 12_.345;
                        ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc real-bad3.stan
Syntax error in 'real-bad3.stan', line 2, column 15, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      real x = 12._345;
                         ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc real-bad4.stan
Syntax error in 'real-bad4.stan', line 2, column 18, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      real x = 12.345_;
                            ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc real-bad5.stan
Syntax error in 'real-bad5.stan', line 2, column 16, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      real x = 12.3_e+10;
                          ^
     3:  }
   -------------------------------------------------

Invalid character found.
  $ ../../../../../install/default/bin/stanc real-bad6.stan
Syntax error in 'real-bad6.stan', line 2, column 20, lexing error:
   -------------------------------------------------
     1:  transformed data {
     2:      real x = 12.3e+10_;
                              ^
     3:  }
   -------------------------------------------------

Invalid character found.
